Add comprehensive social features and profile customization
- Add profile customization with bio and daily goals editing
- Implement social feed with post creation, likes, and comments
- Add AI-powered meal analysis with GPT-4o Vision
- Implement meal sharing functionality to social feed
- Add photo upload capabilities for posts
- Enhance UI with modern design patterns and responsive layout
- Remove Emergent branding and customize for EatFlex
- Update browserslist database and fix CORS configuration
- Add comprehensive error handling and logging
- Update README with new features and technologies

--- a/.gitignore
+++ b/.gitignore
@@ -77,4 +77,19 @@ agenthub/agents/youtube/db
 .cache/
 
 # Mobile development
-android-sdk/ 
+android-sdk/
+
+# EatFlex specific
+*.log
+frontend/test-api.html
+backend/server.log
+frontend/frontend.log
+frontend/build/
+frontend/package-lock.json
+backend/myenv/
+
+# Environment files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
