--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,1 @@
-REACT_APP_BACKEND_URL=https://41af3f92-6840-4120-a59b-0b9c2b7953cf.preview.emergentagent.com
-WDS_SOCKET_PORT=443
+REACT_APP_BACKEND_URL=http://127.0.0.1:8001
