--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,15 +8,21 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5"
   },
   "scripts": {
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
+    "jest": {
+      "setupFilesAfterEnv": [
+        "<rootDir>/src/setupTests.js"
+      ]
+    },
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:8001",
+  "homepage": ".",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -32,13 +38,15 @@
   "devDependencies": {
     "@craco/craco": "^7.1.0",
     "@eslint/js": "9.23.0",
-    "autoprefixer": "^10.4.20",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "9.23.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.2",
     "eslint-plugin-react": "7.37.4",
     "globals": "15.15.0",
-    "postcss": "^8.4.49",
+    "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
